Updated ipics to 1.0, added input validation for media type

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ipics-cli",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Search for thumbnails and images for Itunes media and open default browser to preview results",
   "repository": "https://github.com/ingve/ipics-cli",
   "scripts": {
@@ -19,7 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "filenamify": "^1.2.1",
-    "ipics": "0.0.1",
+    "ipics": "^1.0.0",
     "opn": "^4.0.1"
   },
   "devDependencies": {
